# clip-share

./: Cargo.toml  data.db  data.db-shm  data.db-wal
migrations/: 202308181627_init.sql
src/: main.rs
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: databaseid.rs  mod.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clipid.rs  content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: form.rs  httpd.rs  mod.rs
