[package]
name = "clip-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipshare"
path = "src/lib/mod.rs"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"]}
thiserror = "1"
rand = "0.8"
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"]}
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
